# TVPAC

./: Allocator.cpp  CMakeLists.txt  Lexer.hpp  Reader.hpp  Translator.hpp  VariableBlock.hpp  VariableSaver.hpp  include.hpp  main.cpp
Allocator/: Allocator.hpp  ClientMemoryBlock.hpp  InternalMemory.cpp  InternalMemory.hpp  Segment.cpp  Segment.hpp
containers/: Deque.hpp  HashTable.hpp  List.hpp  ListNode.hpp  Queue.hpp  Stack.hpp
